# arlib

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md  annotated.html  arlib_8hpp_source.html  arlib__utils_8hpp.html  arlib__utils_8hpp__dep__incl.map  arlib__utils_8hpp__dep__incl.md5  arlib__utils_8hpp__incl.map  arlib__utils_8hpp__incl.md5  arlib__utils_8hpp_source.html  arlib_workspace.code-workspace  bidirectional__dijkstra_8hpp.html  bidirectional__dijkstra_8hpp__dep__incl.map  bidirectional__dijkstra_8hpp__dep__incl.md5  bidirectional__dijkstra_8hpp__incl.map  bidirectional__dijkstra_8hpp__incl.md5  bidirectional__dijkstra_8hpp_source.html  bidirectional__dijkstra__impl_8hpp.html  bidirectional__dijkstra__impl_8hpp__dep__incl.map  bidirectional__dijkstra__impl_8hpp__dep__incl.md5  bidirectional__dijkstra__impl_8hpp__incl.map  bidirectional__dijkstra__impl_8hpp__incl.md5  bidirectional__dijkstra__impl_8hpp_source.html  build.py  build_exploration.sh  build_profiler.sh  clang_format_all.sh  classarlib_1_1BiDijkstraVisitor-members.html  classarlib_1_1BiDijkstraVisitor.html  classarlib_1_1IdentityBiDijkstraVisitor-members.html  classarlib_1_1IdentityBiDijkstraVisitor.html  classarlib_1_1Path-members.html  classarlib_1_1Path.html  classarlib_1_1ReorderBuffer-members.html  classarlib_1_1ReorderBuffer.html  classarlib_1_1UninformedBiPrunerVisitor-members.html  (+257 more)
algorithms/: multipass.cpp  onepass.cpp  onepass_plus.cpp  svp_plus.cpp
cmake/: arlibConfig.cmake
doc/: CMakeLists.txt  Doxyfile.in  new_header.html
doc/pages/: esx.md  mainpage.md  opplus.md  penalty.md
dse_apps/: driver.cpp  esx.xml  kspwlo.conf  multipass.xml  onepass.xml  onepass_plus.cpp  opplus.xml  penalty.xml
dse_apps/kspwlo_ref/: esx.xml  multipass.xml  onepass.xml
dse_apps/onepass_plus/: driver_onepass_plus.cpp  onepass_plus.xml
examples/: CMakeLists.txt  extending_arlib.md  getting_started.md  include_in_cmake_project.md
examples/src/: getting_started.cpp  softwarex_example.cpp
graphs/: citta_studi.gr
include/: graph_types.hpp  graph_utils.hpp  onepass_plus.hpp
include/arlib/: CMakeLists.txt  arlib.hpp  bidirectional_dijkstra.hpp  esx.hpp  graph_pruning.hpp  graph_types.hpp  graph_utils.hpp  multi_predecessor_map.hpp  onepass_plus.hpp  path.hpp  penalty.hpp  reorder_buffer.hpp  terminators.hpp  type_traits.hpp  uninformed_bidirectional_pruning.hpp  visitor.hpp
include/arlib/details/: CMakeLists.txt  arlib_utils.hpp  bidirectional_dijkstra_impl.hpp  esx_impl.hpp  onepass_plus_impl.hpp  path_impl.hpp  penalty_impl.hpp  ubp_impl.hpp
include/arlib/routing_kernels/: CMakeLists.txt  bidirectional_dijkstra.hpp  types.hpp  visitor.hpp
include/arlib/routing_kernels/details/: bidirectional_dijkstra_impl.hpp
include/kspwlo/: bidirectional_dijkstra.hpp  error_metrics.hpp  esx.hpp  graph_pruning.hpp  graph_types.hpp  graph_utils.hpp  onepass_plus.hpp  penalty.hpp  reorder_buffer.hpp  visitor.hpp
model/: graph.cpp  graph.hpp
sample/: sample.gr
script/: build_doxygen.sh  install_travis_dependencies.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+51 more)
src/: graph_utils.cpp  main.cpp
src/algorithms/: kspwlo.hpp  multipass.cpp  onepass_plus.cpp
src/arlib/: CMakeLists.txt  graph_utils.cpp
src/arlib/details/: arlib_utils.hpp  bidirectional_dijkstra_impl.hpp  esx_impl.cpp  esx_impl.hpp  onepass_plus_impl.hpp  penalty_impl.hpp
src/exploration/: error_metrics.hpp  graph_utils.hpp
src/impl/: onepass_plus_impl.hpp
src/kspwlo/: graph_utils.cpp
src/kspwlo/impl/: bidirectional_dijkstra_impl.hpp  esx_impl.cpp  esx_impl.hpp  kspwlo_impl.hpp  onepass_plus_impl.hpp  penalty_impl.hpp
src/model/: graph.cpp  graph.hpp
src/tools/: tools.hpp
test/: CMakeLists.txt  cittastudi_graph.hpp  test_types.hpp  utils.hpp
test/include/: test_bidirectional_dijkstra.cpp  test_esx.cpp  test_graph_utils.cpp  test_multi_predecessor_map.cpp  test_onepass_plus.cpp  test_penalty.cpp  test_pruning.cpp  test_reorder_buffer.cpp
tools/: astar.cpp  dijkstra.cpp
tools/python/: CMakeLists.txt
tools/python/include/: arlib_utils.hpp  esx.hpp  graph_types.hpp  onepass_plus.hpp  penalty.hpp
tools/python/src/: arlib.cpp  esx.cpp  graph_types.cpp  onepass_plus.cpp  penalty.cpp
